# astroport-dca

./: .gitignore  Cargo.toml  README.md
contracts/dca/: Cargo.toml  README.md
contracts/dca/.cargo/: config
contracts/dca/examples/: dca_schema.rs
contracts/dca/src/: contract.rs  error.rs  get_token_allowance.rs  lib.rs  state.rs
contracts/dca/src/handlers/: add_bot_tip.rs  cancel_dca_order.rs  create_dca_order.rs  mod.rs  modify_dca_order.rs  perform_dca_purchase.rs  update_config.rs  update_user_config.rs  withdraw.rs
contracts/dca/src/queries/: get_config.rs  get_user_config.rs  get_user_dca_orders.rs  mod.rs
contracts/dca/src/tests/: mock_app.rs  mock_instantiate.rs  mod.rs  read_item.rs  read_map.rs  store_code.rs
scripts/: build_release.sh
