[package]
name = "astroport-dca-module"
version = "1.0.0"
authors = ["Astroport", "Kaimen Sano"]
edition = "2021"
description = "The Astroport DCA module contract implementation"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
astroport = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "main" }
astroport-dca = { path = "../../packages/astroport-dca" }
cw2 = { version = "0.13.4" }
cw20 = { version = "0.13.4" }
cosmwasm-std = { version = "1.0.0" }
cw-storage-plus = {version = "0.13.4"}
schemars = "0.8.10"
serde = { version = "1.0.140", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }

[dev-dependencies]
cosmwasm-schema = "1.0.0"
cw-multi-test = "0.14.0"
cw20-base = "0.14.0"
